--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Modal Maker</title>
+	<title>Messaging</title>
 	<link href="https://unpkg.com/brixi@0.3.3/brixi.min.css" rel="stylesheet">
 	<style>
 		*{
